<resources>

    <string name="app_name">Bookstore Inventory</string>

    <string name="modify_activity_title_new_book">Add a Book</string>

    <string name="save">Save</string>

    <string name="delete">Delete</string>

    <string name="add">Add a book to the inventory</string>

    <string name="parameter_name">Name</string>

    <string name="parameter_quantity">Quantity</string>

    <string name="parameter_price">Price</string>

    <string name="parameter_supplier_name">Supplier Name</string>

    <string name="parameter_supplier_phone_number">Supplier Phone</string>

    <string name="hint_book_name">Name</string>

    <string name="hint_book_price">Price</string>

    <string name="hint_book_quantity">Quantity</string>

    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_phone_number">Supplier Phone</string>

    <string name="book_quantity_unit">pcs</string>

    <string name="book_price_unit">$</string>

    <string name="supplier_unknown">Unknown</string>

    <string name="supplier_readwell">Readwell</string>

    <string name="supplier_goodbooks">Goodbooks</string>

    <string name="supplier_fictionfans">Fictionfans</string>

    <string name="supplier_bookhouse">Bookhouse</string>

    <string name="phonenumber_none">Unknown</string>

    <string name="phonenumber_readwell">361123456</string>

    <string name="phonenumber_goodbooks">362345678</string>

    <string name="phonenumber_fictionfans">363456789</string>

    <string name="phonenumber_bookhouse">363567891</string>

</resources>
